# Compiler

./: .gitignore  CMakeLists.txt  Makefile  compiler  main.c  output.txt  test_content.txt
SRC/: Makefile  ast.c  ast.h  compiler  error.c  error.h  errors.h  expression.c  expression.h  generator.c  generator.h  linlist.c  linlist.h  main.c  output.txt  parser.c  parser.h  scanner.c  scanner.h  stack.c  stack.h  string.c  string.h  structures.c  structures.h  symstack.c  symstack.h  symtable.c  symtable.h  test_content.txt  vstr.c  vstr.h
SRC/testdir/: compiler  error.h  expression.c  expression.h  generator.c  generator.h  is_it_ok.sh  linlist.h  parser.c  parser.h  rozdeleni  scanner.c  symstack.h
tests/: my_tests  test.c  test_cases.txt
tests/parser/: Makefile  main.c  my_tests  test.c  test_content.txt
tests/scanner/: Makefile  test.c  test_cases.txt
